<resources>
    <string name="app_name">LabCE</string>
    <string name="iniciar">Iniciar</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="correc_electronico">Correc electronico</string>
    <string name="password">Contraseña</string>
    <string name="cedula">Cedula</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cambio_de_pwd">Cambio de contraseña</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Laboratorios</string>
    <string name="menu_gallery">Solicitudes de prestamo</string>
    <string name="menu_slideshow">Mi cuenta profesor</string>
    <string name="fecha_init">Fecha inicio:</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="reservar">Reservar</string>
    <string name="laboratorio_06">Laboratorio 06</string>
    <string name="f2_08">F2-08</string>
    <string name="f2_05">F2-05</string>
    <string name="f2_06">F2-06</string>
    <string name="f2_07">F2-07</string>
    <string name="hora">Hora</string>
    <string name="lunes">Lunes</string>
    <string name="viernes">Viernes</string>
    <string name="jueves">Jueves</string>
    <string name="miercoles">Miercoles</string>
    <string name="martes">Martes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>