<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/inicio_de_sesion"
        android:textColor="@color/blue_special"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="388dp"
        android:layout_marginTop="236dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/correc_electronico"
            android:layout_margin="10sp"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/log_personalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:hint="@string/cedula"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/log_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:hint="@string/password"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/log_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/blue_special"
            android:textSize="15sp"
            android:layout_margin="10sp"
            />
        <Button
            android:id="@+id/log_cambiopwd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cambio_de_pwd"
            android:textColor="@color/blue_special"
            android:textSize="12sp"
            android:layout_margin="10sp"
            android:backgroundTint="#FDF6FE"
            />




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>