<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chpwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePwdActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cambio_de_contrase_a"
        android:textColor="@color/blue_special"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="388dp"
        android:layout_marginTop="236dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ch_personalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:hint="@string/cedula"
            android:maxLength="9"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/ch_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:hint="@string/password"
            android:textSize="15sp"
            android:maxLength="25"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ch_newpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nueva_contrase_a"
            android:layout_margin="10sp"
            android:textSize="15sp"
            android:maxLength="50"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cambiar_contrase_a"
            android:textColor="@color/blue_special"
            android:textSize="15sp"
            android:layout_margin="10sp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

