<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2_08"
            android:textSize="20sp"
            android:layout_margin="20sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_go_request08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/reservar"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_special"
            android:textSize="16sp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2_07"
            android:textSize="20sp"
            android:layout_margin="20sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_go_request06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/reservar"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_special"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2_06"
            android:textSize="20sp"
            android:layout_margin="20sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_go_request05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/reservar"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_special"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2_05"
            android:textSize="20sp"
            android:layout_margin="20sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_go_request07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/reservar"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_special"
            android:textSize="16sp" />




    </LinearLayout>
</ScrollView>